--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+
 [project]
 name = "auth-util"
-version = "0.1.1"
+dynamic = ['version']
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -17,6 +22,9 @@ dependencies = [
 dev = [
     "grpcio-tools>=1.69.0",
 ]
+
+[tool.hatch.version]
+path = 'auth_util/version.py'
 
 [tool.ruff]
 line-length = 120
